[package]
name = "glassy"
authors = ["decipher"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
imageproc = "0.24.0"
thiserror = "1.0.58"
clap = { version = "4.5.4" , features = ["derive"]}
libblur = "0.9.4"
log = "0.4.21"
env_logger = "0.11.3"
