[package]
name = "glassy"
authors = ["decipher", "Rhelvetican"]
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1"
image = "0.25"
imageproc = "0.24"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
libblur = "0.9"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
rpath = true
debug = false
panic = "abort"
